Many `ElementPattern` objects are being built dynamically inside PSI element iterations (loops). This causes unnecessary object allocation and GC pressure because pattern building involves creating multiple nested objects on every iteration.